работающее наложение текстур

--- a/assets/css/vizualizator.css
+++ b/assets/css/vizualizator.css
@@ -16,3 +16,4 @@
 #material-1 {background: red;}
 #material-2 {background: blue;}
 #material-3 {background: green;}
+/*#material-4 {background: url(../img/materials/Bradshaw.jpg);}*/
