--- a/assets/css/vizualizator.css
+++ b/assets/css/vizualizator.css
@@ -1,5 +1,11 @@
 *{outline: none;}
 .toolbar {padding-top: 2rem;}
+.toolbar-materials {
+	display: flow-root;
+	overflow: hidden;
+	float: left;
+	margin: 0 2rem 1rem 0;
+}
 .material-select {
 	display: block;
     float: left;
